- Création classe client. - Création de toutes les vues principales. - Création de la DAL Client

--- a/AirAtlantique_Csharp/MainWindow.xaml
+++ b/AirAtlantique_Csharp/MainWindow.xaml
@@ -5,8 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AirAtlantique_Csharp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="500" Width="1000">
+
     <Grid>
-        //Test
+        <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions><Grid.Background>
+            <ImageBrush ImageSource="Images/img_ciel.jpg" Stretch="UniformToFill"/>
+        </Grid.Background>
+        <Frame x:Name="ContenuPage" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="7" Grid.RowSpan="7"/>
+
+        <Button x:Name="BtnAccueil" Background="White" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="1" Click="BtnAccueil_Click" Opacity="50" >Accueil</Button>
+        <Button x:Name="BtnGestionDesAvions" Background="White" Grid.Column="1" Grid.ColumnSpan="1" Grid.RowSpan="1" Click="BtnGestionDesAvions_Click">Avions</Button>
+        <Button x:Name="BtnGestionDesAeroports" Background="White" Grid.Column="2" Grid.ColumnSpan="1" Grid.RowSpan="1" Click="BtnGestionDesAeroports_Click">Aéroports</Button>
+        <Button x:Name="BtnGestionDesVols" Background="White" Grid.Column="3" Grid.ColumnSpan="1" Grid.RowSpan="1" Click="BtnGestionDesVols_Click">Vols</Button>
+        <Button x:Name="BtnGestionDesClients" Background="White" Grid.Column="4" Grid.ColumnSpan="1" Grid.RowSpan="1" Click="BtnGestionDesClients_Click">Clients</Button>
+        
+
+
     </Grid>
+    
 </Window>
