--- a/AirAtlantique_Csharp/Views/GestionClientsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionClientsView.xaml
@@ -5,7 +5,11 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="1000"
-      Title="GestionClientsView">
+      Title="GestionClientsView"
+      xmlns:vm="clr-namespace:AirAtlantique_Csharp.ViewModels">
+    <Page.DataContext>
+        <vm:GestionClientsViewModel/>
+    </Page.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -30,7 +34,7 @@
 
         <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des clients</Bold></TextBlock> -->
 
-        <DataGrid Name="listeClients" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="7" Grid.RowSpan="7">
+        <DataGrid Name="listeClients" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="7" Grid.RowSpan="7" Background="#335C90">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Client" Binding="{Binding idClientProperty, Mode=OneWay}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Nom" Binding="{Binding NomProperty, Mode=TwoWay}"></DataGridTextColumn>
