--- a/AirAtlantique_Csharp/Views/GestionVolsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionVolsView.xaml
@@ -31,7 +31,7 @@
 
         <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des vols</Bold></TextBlock> -->
 
-        <DataGrid Name="listeVols" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
+        <DataGrid Name="listeVols" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" Background="Transparent" BorderBrush="Transparent">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Vol" ></DataGridTextColumn>
                 <DataGridTextColumn Header="ID Avion" ></DataGridTextColumn>
