--- a/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
@@ -6,43 +6,63 @@
       xmlns:local="clr-namespace:AirAtlantique_Csharp.Views"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="1000"
-      Title="GestionAvionsView">
+      Title="GestionAvionsView"
+      xmlns:vm="clr-namespace:AirAtlantique_Csharp.ViewModels">
+    <Page.DataContext>
+        <vm:AvionViewModel/>
+    </Page.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
+
+        <!-- Formulaire d'ajout d'un avion -->
+        <TextBlock Text="Ajout d'un avion" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+        <TextBlock Text="Modele" TextDecorations="Underline" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.ModeleProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBlock Text="Motorisation" TextDecorations="Underline" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.MotorisationProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBlock Text="Capacité" TextDecorations="Underline" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.CapaciteProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBlock Text="Places Premium" TextDecorations="Underline" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.NbPlacesPremiumProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBlock Text="Places Business" TextDecorations="Underline" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.NbPlacesBusinessProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBlock Text="Places Eco" TextDecorations="Underline" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding Avion.NbPlacesEcoProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <Button Content="Créer"  Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
 
         <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
 
-        <DataGrid Name="listeAvions" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
+        <!-- Grille d'affichage des avions -->
+        <TextBlock Text="Liste des avions" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+
+        <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeAvions}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID Avion" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Modèle" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Motorisation" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Capacité" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Code Postal" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Premium" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Business" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Eco"></DataGridTextColumn>
-                <DataGridTextColumn Header="Etat" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Type" ></DataGridTextColumn>
+                <DataGridTextColumn Header="ID Avion" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="Modèle" Binding="{Binding ModeleProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Motorisation" Binding="{Binding MotorisationProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Capacité" Binding="{Binding CapaciteProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Premium" Binding="{Binding NbPlacesPremiumProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Business" Binding="{Binding NbPlacesBusinessProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Eco" Binding="{Binding NbPlacesEcoProperty, Mode=TwoWay}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
 
