--- a/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
@@ -36,18 +36,18 @@
         <!-- Formulaire d'ajout d'un avion -->
         <TextBlock Text="Ajout d'un avion" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
         <TextBlock Text="Modele" TextDecorations="Underline" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.ModeleProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding NewModele, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
         <TextBlock Text="Motorisation" TextDecorations="Underline" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.MotorisationProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding NewMotorisation, Mode=TwoWay}" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
         <TextBlock Text="Capacité" TextDecorations="Underline" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.CapaciteProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding NewCapacite, Mode=TwoWay}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
         <TextBlock Text="Places Premium" TextDecorations="Underline" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.NbPlacesPremiumProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding NewNbPlacesPremium, Mode=TwoWay}" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
         <TextBlock Text="Places Business" TextDecorations="Underline" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.NbPlacesBusinessProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding NewNbPlacesBusiness, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
         <TextBlock Text="Places Eco" TextDecorations="Underline" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding Avion.NbPlacesEcoProperty, Mode=TwoWay}" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <Button Content="Créer"  Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <TextBox Text="{Binding NewNbPlacesEco, Mode=TwoWay}" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
+        <Button Content="Créer" Command="{Binding SubmitCommand}" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
 
         <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
 
@@ -57,12 +57,12 @@
         <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeAvions}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Avion" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Modèle" Binding="{Binding ModeleProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Motorisation" Binding="{Binding MotorisationProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Capacité" Binding="{Binding CapaciteProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Premium" Binding="{Binding NbPlacesPremiumProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Business" Binding="{Binding NbPlacesBusinessProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Places Eco" Binding="{Binding NbPlacesEcoProperty, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Modèle" Binding="{Binding ModeleProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Motorisation" Binding="{Binding MotorisationProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Capacité" Binding="{Binding CapaciteProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Premium" Binding="{Binding NbPlacesPremiumProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Business" Binding="{Binding NbPlacesBusinessProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Places Eco" Binding="{Binding NbPlacesEcoProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
 
