- Ajout des classes Aeroport, Avion, Client, Utilisateur et Vol. - Ajout de AeroportViewModel, AvionViewModel, ClientViewModel, UtilisateurViewModel et VolViewModel. - Ajout de GestionAeroportsView, GestionAvionsView, GestionClientView. PAS DE GestionVolsView CAR BUG, pas encore de GestionUtilisateursView. - Ajout de AeroportDAL, AvionDAL, ClientDAL, UtilisateurDAL et VolDAL.

--- a/AirAtlantique_Csharp/MainWindow.xaml
+++ b/AirAtlantique_Csharp/MainWindow.xaml
@@ -26,7 +26,8 @@
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
-            </Grid.RowDefinitions><Grid.Background>
+            </Grid.RowDefinitions>
+        <Grid.Background>
             <ImageBrush ImageSource="Images/img_ciel.jpg" Stretch="UniformToFill"/>
         </Grid.Background>
         <Frame x:Name="ContenuPage" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="7" Grid.RowSpan="7"/>
