--- a/AirAtlantique_Csharp/Views/GestionAeroportsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAeroportsView.xaml
@@ -6,40 +6,50 @@
       xmlns:local="clr-namespace:AirAtlantique_Csharp.Views"
       mc:Ignorable="d" 
       d:DesignHeight="500" d:DesignWidth="1000"
-      Title="GestionAeroportsView">
+      Title="GestionAeroportsView"
+      xmlns:vm="clr-namespace:AirAtlantique_Csharp.ViewModels">
+      <Page.DataContext>
+        <vm:AeroportViewModel/>
+      </Page.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
 
-        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des aéroports</Bold></TextBlock> -->
-        <ComboBox x:Name="comboAero" DisplayMemberPath="AITAProperty" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Grid.RowSpan="1" />
-        <DataGrid Name="listeAeroports" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="6">
+        <Button Content="Ajouter aéroport" Click="Btn_AjouterAeroport" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top" />
+
+        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
+
+        <!-- Grille d'affichage des aéroports -->
+        <TextBlock Text="Liste des aéroports" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+
+        <DataGrid Name="DataGridListeAéroports" ItemsSource="{Binding ListeAeroports}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" SelectedItem="{Binding AvionSelectionne}" SelectionMode="Single">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Date Arrivée" ></DataGridTextColumn>
-                <DataGridTextColumn Header="ID Avion" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Modèle" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Places" ></DataGridTextColumn>
-                <DataGridTextColumn Header="Etat" ></DataGridTextColumn>
-                <DataGridTextColumn Header="ID Vol" ></DataGridTextColumn>
+                <DataGridTextColumn Header="ID Aéroport" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="AITA" Binding="{Binding AitaProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Pays" Binding="{Binding PaysProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Ville" Binding="{Binding VilleProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
             </DataGrid.Columns>
+            <DataGrid.InputBindings>
+                <MouseBinding Gesture="RightClick" Command="{Binding DeleteCommand}" />
+            </DataGrid.InputBindings>
         </DataGrid>
 
 
