--- a/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
@@ -33,28 +33,14 @@
             <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
 
-        <!-- Formulaire d'ajout d'un avion -->
-        <TextBlock Text="Ajout d'un avion" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
-        <TextBlock Text="Modele" TextDecorations="Underline" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewModele, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <TextBlock Text="Motorisation" TextDecorations="Underline" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewMotorisation, Mode=TwoWay}" Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <TextBlock Text="Capacité" TextDecorations="Underline" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewCapacite, Mode=TwoWay}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <TextBlock Text="Places Premium" TextDecorations="Underline" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewNbPlacesPremium, Mode=TwoWay}" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <TextBlock Text="Places Business" TextDecorations="Underline" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewNbPlacesBusiness, Mode=TwoWay}" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <TextBlock Text="Places Eco" TextDecorations="Underline" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
-        <TextBox Text="{Binding NewNbPlacesEco, Mode=TwoWay}" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Center"/>
-        <Button Content="Créer" Command="{Binding SubmitCommand}" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top"/>
+        <Button Content="Ajouter avion" Click="Btn_AjouterAvion" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top" />
 
         <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
 
         <!-- Grille d'affichage des avions -->
         <TextBlock Text="Liste des avions" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
 
-        <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeAvions}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6">
+        <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeAvions}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" SelectedItem="{Binding AvionSelectionne}" SelectionMode="Single">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Avion" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
                 <DataGridTextColumn Header="Modèle" Binding="{Binding ModeleProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
@@ -64,6 +50,9 @@
                 <DataGridTextColumn Header="Places Business" Binding="{Binding NbPlacesBusinessProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Places Eco" Binding="{Binding NbPlacesEcoProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
             </DataGrid.Columns>
+            <DataGrid.InputBindings>
+                <MouseBinding Gesture="RightClick" Command="{Binding DeleteCommand}" />
+            </DataGrid.InputBindings>
         </DataGrid>
 
 
