--- a/AirAtlantique_Csharp/Views/GestionClientsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionClientsView.xaml
@@ -14,42 +14,46 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
+            <ColumnDefinition Width="142*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
+            <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
 
-        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des clients</Bold></TextBlock> -->
 
-        <DataGrid Name="listeClients" ItemsSource="{Binding}" AutoGenerateColumns="False" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="7" Grid.RowSpan="7" Background="#335C90">
+        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
+
+        <!-- Grille d'affichage des avions -->
+        <TextBlock Text="Liste des avions" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+
+        <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeClients}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" SelectedItem="{Binding AvionSelectionne}" SelectionMode="Single">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id Client" Binding="{Binding idProperty, Mode=OneWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Nom" Binding="{Binding NomProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Prénom" Binding="{Binding PrenomProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Pays" Binding="{Binding PaysProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Ville" Binding="{Binding VilleProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Code Postal" Binding="{Binding CodePostalProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Téléphone" Binding="{Binding TelephoneProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Adresse" Binding="{Binding AdresseProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Points Fidélité" Binding="{Binding PtsFideliteProperty, Mode=TwoWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="ID Dernier Vol" Binding="{Binding IdDernierVolProperty, Mode=OneWay}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Date Dernier Vol" Binding="{Binding DateDernierVolProperty, Mode=OneWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="ID Client" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
+                <DataGridTextColumn Header="Nom" Binding="{Binding NomProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Prénom" Binding="{Binding PrenomProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Pays" Binding="{Binding PaysProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Ville" Binding="{Binding VilleProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Code Postal" Binding="{Binding CodePostalProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Téléphone" Binding="{Binding TelephoneProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Adresse" Binding="{Binding AdresseProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
+
             </DataGrid.Columns>
-            
+            <DataGrid.InputBindings>
+                <MouseBinding Gesture="RightClick" Command="{Binding DeleteCommand}" />
+            </DataGrid.InputBindings>
         </DataGrid>
 
 
