--- a/AirAtlantique_Csharp/Views/AjouterAvionWindow.xaml
+++ b/AirAtlantique_Csharp/Views/AjouterAvionWindow.xaml
@@ -48,7 +48,7 @@
         <TextBox Text="{Binding NewNbPlacesBusiness, Mode=TwoWay}" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="4" Height="20" Margin="0 12 0 0"/>
         <TextBlock Text="Places Eco" TextDecorations="Underline" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="4" Height="20" VerticalAlignment="Top"/>
         <TextBox Text="{Binding NewNbPlacesEco, Mode=TwoWay}" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="4" Height="20" Margin="0 12 0 0"/>
-        <Button Content="Créer" Command="{Binding SubmitCommand}" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Height="20" VerticalAlignment="Center"/>
+        <Button Content="Créer" Command="{Binding SubmitCommand}" Click="Btn_Creer" Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Height="20" VerticalAlignment="Center"/>
 
     </Grid>
 </Window>
