--- a/AirAtlantique_Csharp/Views/GestionAeroportsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAeroportsView.xaml
@@ -33,9 +33,7 @@
             <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Ajouter aéroport" Click="Btn_AjouterAeroport" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top" />
-
-        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
+        <Button Content="Ajouter aéroport" Click="Btn_AjouterAeroport" Grid.Column="0" Grid.Row="2" Width="100" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" />
 
         <!-- Grille d'affichage des aéroports -->
         <TextBlock Text="Liste des aéroports" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
@@ -51,6 +49,7 @@
                 <MouseBinding Gesture="RightClick" Command="{Binding DeleteCommand}" />
             </DataGrid.InputBindings>
         </DataGrid>
+
 
 
     </Grid>
