--- a/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionAvionsView.xaml
@@ -33,9 +33,7 @@
             <RowDefinition Height="62*"/>
         </Grid.RowDefinitions>
 
-        <Button Content="Ajouter avion" Click="Btn_AjouterAvion" Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="1" Height="20" VerticalAlignment="Top" />
-
-        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des avions</Bold></TextBlock> -->
+        <Button Content="Ajouter avion" Click="Btn_AjouterAvion" Grid.Column="0" Grid.Row="2" Width="100" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" />
 
         <!-- Grille d'affichage des avions -->
         <TextBlock Text="Liste des avions" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
