--- a/AirAtlantique_Csharp/Views/GestionUtilisateursView.xaml
+++ b/AirAtlantique_Csharp/Views/GestionUtilisateursView.xaml
@@ -34,12 +34,10 @@
         </Grid.RowDefinitions>
 
 
-        <!-- <TextBlock FontSize="20" Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="1"><Bold>Gestion des utilisateurs</Bold></TextBlock> -->
-
-        <!-- Grille d'affichage des avions -->
+        <!-- Grille d'affichage des utilisateurs -->
         <TextBlock Text="Liste des utilisateurs" TextDecorations="Underline" FontSize="15" FontWeight="Bold" Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="5" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
 
-        <DataGrid Name="DataGridListeAvions" ItemsSource="{Binding ListeUtilisateurs}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" HorizontalAlignment="Center" SelectedItem="{Binding UtilisateurSelectionne}" SelectionMode="Single">
+        <DataGrid Name="DataGridListeUtilisateurs" ItemsSource="{Binding ListeUtilisateurs}" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="6" HorizontalAlignment="Center" SelectedItem="{Binding UtilisateurSelectionne}" SelectionMode="Single">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Utilisateur" Binding="{Binding IdProperty, Mode=OneWay}" ></DataGridTextColumn>
                 <DataGridTextColumn Header="Nom utilisateur" Binding="{Binding NomUtilisateurProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
@@ -52,12 +50,10 @@
                 <DataGridTextColumn Header="Ville" Binding="{Binding VilleProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Code postal" Binding="{Binding CodePostalProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
                 <DataGridTextColumn Header="Numero téléphone" Binding="{Binding NumeroTelephoneProperty, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"></DataGridTextColumn>
-
-
             </DataGrid.Columns>
-            <!-- <DataGrid.InputBindings>
+            <DataGrid.InputBindings>
                 <MouseBinding Gesture="RightClick" Command="{Binding DeleteCommand}" />
-            </DataGrid.InputBindings> -->
+            </DataGrid.InputBindings>
         </DataGrid>
 
 
